--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,23 @@ article .team {
     padding: 1em 0 .5em .7em;
 }
 
+/* =================
+	 Sponsors
+	================= */
+
+.gold img {
+	width: 100%;
+}
+
+.silver img {
+	width: 45%;
+}
+
+.bronze img {
+	width: 30%;
+}
+
+
 
 }
 
@@ -361,6 +378,25 @@ article .team {
         float: right;
         width: 28%;
     }
+    
+
+/* =================
+	 Sponsors
+	================= */
+
+.gold img {
+	width: 100%;
+}
+
+.silver img {
+	width: 35%;
+}
+
+.bronze img {
+	width: 20%;
+}
+
+
 }
 
 @media only screen and (min-width: 1140px) {
@@ -373,6 +409,25 @@ article .team {
         width: 1026px; /* 1140px - 10% for margins */
         margin: 0 auto;
     }
+    
+    
+    /* =================
+	 Sponsors
+	================= */
+
+.gold img {
+	width: 75%;
+}
+
+.silver img {
+	width: 25%;
+}
+
+.bronze img {
+	width: 10%;
+}
+
+    
 }
 
 /* ==========================================================================
