--- a/css/main.css
+++ b/css/main.css
@@ -242,7 +242,7 @@ nav a:hover {
 
 	.main-container .banner {
 	display: block;
-	background-image: url('../img/Banner.png');
+	
 	position: relative;
 	background-position: center;
 	width: 100%;
@@ -251,7 +251,14 @@ nav a:hover {
 	padding: 0;
 	background-size: cover;
 	background-repeat: no-repeat;
-
+	}
+	
+	#home-banner {
+	background-image: url('../img/Banner.png');
+	}
+	
+	#team-banner {
+	background-image: url('../img/Triton Rocket.jpg')
 	}
 
 	.main-container .banner h2 {
@@ -300,10 +307,11 @@ nav a:hover {
    ================ */
 
 
-article .team {
+.team {
     position: relative;
     width: 100%;
     border: 1px solid grey;
+    margin-top: 1em;
 }
 
 .team .team-text {
@@ -379,13 +387,25 @@ article .team {
         width: 28%;
     }
     
+    
+    
+/* ================
+    WIDE: Team
+   ================ */
+
+
+.team {
+	width: 75%;
+}
+
+    
 
 /* =================
 	 Sponsors
 	================= */
 
 .gold img {
-	width: 100%;
+	width: 75%;
 }
 
 .silver img {
@@ -409,6 +429,20 @@ article .team {
         width: 1026px; /* 1140px - 10% for margins */
         margin: 0 auto;
     }
+    
+    
+    
+/* ================
+    MAX WIDE: Team
+   ================ */
+
+
+.team {
+	float: left;
+    width: 45%;
+    margin-left: 4%;
+}
+
     
     
     /* =================
