--- a/css/main.css
+++ b/css/main.css
@@ -220,7 +220,7 @@ nav a:hover {
     }
 
     nav li:last-child a {
-        pading-left: .8em;
+        padding-left: .8em;
     }
 
 /* ========================
