Fixed some issues

--- a/css/main.css
+++ b/css/main.css
@@ -325,7 +325,7 @@ nav a:hover {
     background: black;
     opacity: .7;
     color: white;
-    padding: 1em 0 .5em .7em;
+    padding: 1em .5em .5em .7em;
 }
 
 /* =================
