--- a/css/main.css
+++ b/css/main.css
@@ -208,17 +208,18 @@ nav a:hover {
    ==================== */
 
    nav {
-			width: 57%;
-			margin: 5.5em 0 0 0;
+			width: 55%;
+			margin: 2em 0 0 0;
 	}
 
     nav a {
         float: right;
         margin: 0 auto;
-        padding-right: 1.40%;
+        padding-right: 2%;
         margin-bottom: 0;
         display: inline-block;
         padding-bottom: 0;
+        font-size: 1em;
     }
 
     nav li:first-child a {
@@ -281,6 +282,14 @@ nav a:hover {
 		background: rgb(0, 0, 0);
 		background: rgba(0, 0, 0, 0.7);
 		padding: 10px;
+}
+
+.logo-insert {
+	background-image: url('../img/logo.png');
+	background-repeat: no-repeat;
+	background-size: contain;
+	width: 20em;
+	height: 15em;
 }
 
 	.main aside {
@@ -378,7 +387,8 @@ nav a:hover {
 
     nav {
         float: right;
-        /*width: 65%;*/
+        width: 70%;
+        font-size: 1.5em;
     }
 
 /* ============
@@ -437,6 +447,11 @@ nav a:hover {
         width: 1026px; /* 1140px - 10% for margins */
         margin: 0 auto;
     }
+    
+    nav {
+		width: 73%;
+		font-size: 1.6em;
+}
     
     
     
