--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ textarea {
 body {
     font-size: 1em;
     line-height: 1.4;
+    min-width:300px;
 }
 
 ::-moz-selection {
@@ -201,13 +202,14 @@ nav a:hover {
    Media Queries
    ========================================================================== */
 
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 700px) {
 
 /* ====================
     INTERMEDIATE: Menu
    ==================== */
 
    nav {
+   		float:right;
 			width: 55%;
 			margin: 2em 0 0 0;
 	}
@@ -215,7 +217,7 @@ nav a:hover {
     nav a {
         float: right;
         margin: 0 auto;
-        padding-right: 2%;
+        padding-right: 3%;
         margin-bottom: 0;
         display: inline-block;
         padding-bottom: 0;
@@ -316,16 +318,22 @@ nav a:hover {
 	width: auto;
 }
 
+#team {
+	text-align: center;
+	margin-top: 1em;	
+}
+
 
 /* ================
-    Intermediate: Team
+    Intermediate: Pics
    ================ */
 
 
-.team {
+.team,
+.previous {
 	 margin: 0 auto;
     position: relative;
-    width: 100%;
+    width: 75%;
     border: 1px solid grey;
     margin-top: 1em;
     text-align:center;
@@ -342,6 +350,21 @@ nav a:hover {
     color: white;
     padding: 1em .5em .5em .7em;
 }
+
+
+.previous .project-text {
+	position: absolute;
+	width: 100%;
+	height: 45%;
+	bottom: 0;
+	background: black;
+	opacity: .7;
+	color: white;
+	/*padding: 1em .5em .5em .7em;
+	*/
+}
+
+
 
 /* =================
 	 Sponsors
@@ -364,7 +387,7 @@ nav a:hover {
 }
 
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 880px) {
 
 /* ====================
     WIDE: CSS3 Effects
@@ -387,7 +410,7 @@ nav a:hover {
 
     nav {
         float: right;
-        width: 70%;
+        width: 65%;
         font-size: 1.5em;
     }
 
@@ -412,7 +435,8 @@ nav a:hover {
    ================ */
 
 
-.team {
+.team,
+.previous {
 	width: 75%;
 }
 
